@@ -237,5 +237,55 @@
         </plugins>
       </build>
     </profile>
+
+    <profile>
+      <id>uc12-ui</id>
+      <properties>
+        <javafx.version>21.0.2</javafx.version>
+      </properties>
+
+      <dependencies>
+        <dependency>
+          <groupId>org.openjfx</groupId>
+          <artifactId>javafx-controls</artifactId>
+          <version>${javafx.version}</version>
+          <classifier>${javafx.platform}</classifier>
+        </dependency>
+
+        <dependency>
+          <groupId>org.openjfx</groupId>
+          <artifactId>javafx-fxml</artifactId>
+          <version>${javafx.version}</version>
+          <classifier>${javafx.platform}</classifier>
+        </dependency>
+
+        <dependency>
+          <groupId>org.openjfx</groupId>
+          <artifactId>javafx-graphics</artifactId>
+          <version>${javafx.version}</version>
+          <classifier>${javafx.platform}</classifier>
+        </dependency>
+      </dependencies>
+
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>org.openjfx</groupId>
+            <artifactId>javafx-maven-plugin</artifactId>
+            <version>0.0.8</version>
+            <configuration>
+              <mainClass>com.example.agile_re_tool.UC12ViewStoryWithComments</mainClass>
+              <launcher>exec</launcher>
+              <options>
+                <option>--add-modules=javafx.controls,javafx.fxml,javafx.graphics</option>
+              </options>
+              <systemPropertyVariables>
+                <javafx.platform>${javafx.platform}</javafx.platform>
+              </systemPropertyVariables>
+            </configuration>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
   </profiles>
 </project>
